# CursorAgentOrchestrator

./: .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE_ALIGNMENT.md  ARCHITECTURE_DISCUSSION.md  ARCHITECTURE_IMPLEMENTATION.md  ARCHITECTURE_RELATIONSHIP_ANALYSIS.md  COMPLETE_WORK_PLAN.md  DOCUMENTATION_UPDATE.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  MULTI_AGENT_SUPPORT_ANALYSIS.md  PDF_COMPARISON.md  PDF_COMPLIANCE_CHECK.md  README.md  README_REVIEW.md  REFACTOR_SUMMARY.md  WORKFLOW_COMPLIANCE_CHECK.md  WORKFLOW_GUIDE.md  WORKFLOW_IMPLEMENTATION_PLAN.md  pytest.ini
mcp-server/: .gitignore  ARCHITECTURE.md  CODE_QUALITY_ACCEPTANCE.md  CODE_REVIEW.md  CONCURRENCY_ANALYSIS.md  CONCURRENCY_SUPPORT.md  CURSOR_INTEGRATION.md  DOCUMENTATION_ACCEPTANCE.md  E2E_TEST_RESULTS.md  FINAL_TEST_REPORT.md  FUNCTIONAL_ACCEPTANCE.md  HOW_TO_USE_TOOLS.md  INSTALL.md  ISSUES_AND_FIXES.md  MULTI_AGENT_GUIDE.md  MULTI_AGENT_TEST_RESULTS.md  PYTHON3_COMPATIBILITY.md  QUICK_START.md  README.md  SHUTDOWN.md  TEST_COVERAGE_FIX.md  TOOLS.md  VERIFICATION_GUIDE.md  check_integration.sh  diagnose_mcp.sh  mcp.json.example  pyproject.toml  requirements.txt  setup.py  setup.sh  start_mcp_server.bat  start_mcp_server.sh
mcp-server/src/: __init__.py  main.py  mcp_server.py
mcp-server/src/core/: config.py  exceptions.py  logger.py
mcp-server/src/managers/: task_manager.py  workspace_manager.py
mcp-server/src/tools/: code_generator.py  code_reviewer.py  coverage_analyzer.py  orchestrator_questions.py  prd_confirmation.py  prd_generator.py  stage_dependency_checker.py  task_decomposer.py  task_executor.py  test_generator.py  test_path_question.py  test_reviewer.py  trd_confirmation.py  trd_generator.py  workflow_orchestrator.py  workflow_status.py
mcp-server/src/utils/: file_lock.py
mcp-server/tests/: conftest.py  test_e2e_workflow.py  test_main.py  test_mcp_server.py
mcp-server/tests/core/: test_logger.py
mcp-server/tests/managers/: test_task_manager.py  test_workspace_manager.py
mcp-server/tests/tools/: test_code_generator.py  test_code_reviewer.py  test_coverage_analyzer.py  test_prd_generator.py  (+12 more)
(+30 files in other folders)
